--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -24,5 +24,6 @@ gem "bootsnap", require: false
 
 group :development, :test do
   gem 'dotenv-rails'
+  gem 'rspec-rails'
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 end
