--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 RAILS_ENV=development
+BASE_URL=http://localhost:3000
 
-# IMPORTANT: inside compose, mongo host is "mongo" (not localhost)
 MONGODB_URI=mongodb://mongo:27017/mysmsmessenger_development
 
 TWILIO_ACCOUNT_SID=
